src/compiling_error.txt
/home/usuario/train/src/Line.cpp:15:36: error: no ‘Stop Line::stopFind(std::__cxx11::string)’ member function declared in class ‘Line’
 Stop Line::stopFind(string stopName){
                                    ^
